--- a/CryptoExchanges.Net/CryptoExchanges.Net.Logic/CryptoExchanges.Net.Logic.csproj
+++ b/CryptoExchanges.Net/CryptoExchanges.Net.Logic/CryptoExchanges.Net.Logic.csproj
@@ -33,10 +33,11 @@
     <Reference Include="AutoMapper, Version=6.2.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.6.2.2\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
-    <Reference Include="RestSharp, Version=106.1.0.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.106.1.0\lib\net452\RestSharp.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
@@ -48,9 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Clients\Base\ExchangeClientBase.cs" />
-    <Compile Include="Clients\BinanceClient.cs" />
+    <Compile Include="Clients\API\ApiClient.cs" />
+    <Compile Include="Clients\API\Base\ApiClientBase.cs" />
+    <Compile Include="Clients\Exchanges\Base\ExchangeClientBase.cs" />
+    <Compile Include="Clients\Exchanges\BinanceClient.cs" />
+    <Compile Include="CustomParsers\BinanceCustomParser.cs" />
+    <Compile Include="Exchanges\BinanceExchange.cs" />
+    <Compile Include="Resolvers\ExchangeResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ExtensionMethods.cs" />
+    <Compile Include="Utils\Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -65,5 +73,6 @@
       <Name>CryptoExchanges.Net.Models</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
