--- a/CryptoExchanges.Net/CryptoExchanges.Net.Domain/CryptoExchanges.Net.Domain.csproj
+++ b/CryptoExchanges.Net/CryptoExchanges.Net.Domain/CryptoExchanges.Net.Domain.csproj
@@ -40,7 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomParsers\IBinanceCustomParser.cs" />
     <Compile Include="Enums\ApiMethod.cs" />
     <Compile Include="Enums\DepositStatus.cs" />
     <Compile Include="Enums\OrderSide.cs" />
@@ -48,11 +47,8 @@
     <Compile Include="Enums\TimeInForce.cs" />
     <Compile Include="Enums\TimeInterval.cs" />
     <Compile Include="Enums\WithdrawStatus.cs" />
-    <Compile Include="Clients\IApiClient.cs" />
-    <Compile Include="Clients\IExchangeClient.cs" />
-    <Compile Include="ExchangesConfiguration\IExchange.cs" />
-    <Compile Include="ExchangesConfiguration\IExchangeConfiguration.cs" />
-    <Compile Include="Resolvers\IExchangeResolver.cs" />
+    <Compile Include="IExchangeClient.cs" />
+    <Compile Include="Resolvers\IExchangeClientResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
