--- a/CryptoExchanges.Net/CryptoExchanges.Net.Logic/packages.config
+++ b/CryptoExchanges.Net/CryptoExchanges.Net.Logic/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="RestSharp" version="106.1.0" targetFramework="net461" />
 </packages>
