--- a/CryptoExchanges.Net/CryptoExchanges.Net.Logic/CryptoExchanges.Net.Binance.csproj
+++ b/CryptoExchanges.Net/CryptoExchanges.Net.Logic/CryptoExchanges.Net.Binance.csproj
@@ -36,8 +36,8 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="RestSharp, Version=106.1.0.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.106.1.0\lib\net452\RestSharp.dll</HintPath>
+    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -55,9 +55,10 @@
     <Compile Include="ApiHelper\BinanceApiHelper.cs" />
     <Compile Include="ApiHelper\IBinanceApiHelper.cs" />
     <Compile Include="BinanceClient.cs" />
-    <Compile Include="CustomParsers\BinanceCustomParser.cs" />
-    <Compile Include="CustomParsers\ICustomParser.cs" />
-    <Compile Include="Resolvers\ExchangeResolver.cs" />
+    <Compile Include="BinanceNinjectModule.cs" />
+    <Compile Include="Constants\Endpoints.cs" />
+    <Compile Include="CustomParser\BinanceCustomParser.cs" />
+    <Compile Include="CustomParser\IBinanceCustomParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ExtensionMethods.cs" />
     <Compile Include="Utils\Utilities.cs" />
