--- a/CryptoExchanges.Net/CryptoExchanges.Net.Domain/CryptoExchanges.Net.Domain.csproj
+++ b/CryptoExchanges.Net/CryptoExchanges.Net.Domain/CryptoExchanges.Net.Domain.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CryptoClient.cs" />
     <Compile Include="Enums\ApiMethod.cs" />
     <Compile Include="Enums\DepositStatus.cs" />
     <Compile Include="Enums\OrderSide.cs" />
@@ -47,7 +48,9 @@
     <Compile Include="Enums\TimeInForce.cs" />
     <Compile Include="Enums\TimeInterval.cs" />
     <Compile Include="Enums\WithdrawStatus.cs" />
+    <Compile Include="ICryptoClient.cs" />
     <Compile Include="IExchangeClient.cs" />
+    <Compile Include="Resolvers\ExchangeClientResolver.cs" />
     <Compile Include="Resolvers\IExchangeClientResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
