Refactoring code and implementing logic to set exchange credentials.

--- a/CryptoExchanges.Net/CryptoExchanges.Net.Domain/CryptoExchanges.Net.Domain.csproj
+++ b/CryptoExchanges.Net/CryptoExchanges.Net.Domain/CryptoExchanges.Net.Domain.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Providers\ApiCredentials.cs" />
+    <Compile Include="Providers\IApiCredentialsProvider.cs" />
     <Compile Include="CryptoClient.cs" />
     <Compile Include="Enums\ApiMethod.cs" />
     <Compile Include="Enums\DepositStatus.cs" />
