--- a/CryptoExchanges.Net/CryptoExchanges.Net.DI/packages.config
+++ b/CryptoExchanges.Net/CryptoExchanges.Net.DI/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
+  <package id="Ninject.Extensions.Conventions" version="3.3.0" targetFramework="net461" />
+  <package id="Ninject.Extensions.Factory" version="3.3.2" targetFramework="net461" />
 </packages>
