--- a/CryptoExchanges.Net/CryptoExchanges.Net.Test/packages.config
+++ b/CryptoExchanges.Net/CryptoExchanges.Net.Test/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
 </packages>
