--- a/CryptoExchanges.Net/CryptoExchanges.Net.Bittrex/CryptoExchanges.Net.Bittrex.csproj
+++ b/CryptoExchanges.Net/CryptoExchanges.Net.Bittrex/CryptoExchanges.Net.Bittrex.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{73E75EFB-FC5D-46E8-B73F-30270A4C2760}</ProjectGuid>
+    <ProjectGuid>{E8E3D2EB-6A5D-4F7C-B544-A7CF19530C99}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CryptoExchanges.Net.Binance</RootNamespace>
-    <AssemblyName>CryptoExchanges.Net.Binance</AssemblyName>
+    <RootNamespace>CryptoExchanges.Net.Bittrex</RootNamespace>
+    <AssemblyName>CryptoExchanges.Net.Bittrex</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=6.2.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.6.2.2\lib\net45\AutoMapper.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -40,10 +37,7 @@
       <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,18 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiHelper\BinanceApiHelper.cs" />
-    <Compile Include="ApiHelper\IBinanceApiHelper.cs" />
-    <Compile Include="BinanceClient.cs" />
-    <Compile Include="BinanceNinjectModule.cs" />
-    <Compile Include="Configurations\MappingConfig.cs" />
+    <Compile Include="ApiHelper\BittrexApiHelper.cs" />
+    <Compile Include="ApiHelper\IBittrexApiHelper.cs" />
+    <Compile Include="BittrexClient.cs" />
+    <Compile Include="BittrexNinjectModule.cs" />
     <Compile Include="Constants\Endpoints.cs" />
+    <Compile Include="CustomParser\BittrexCustomParser.cs" />
+    <Compile Include="CustomParser\IBittrexCustomParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ExtensionMethods.cs" />
     <Compile Include="Utils\Utilities.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CryptoExchanges.Net.Domain\CryptoExchanges.Net.Domain.csproj">
@@ -75,6 +67,8 @@
       <Name>CryptoExchanges.Net.Models</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
