Refactoring and making changes to the account methods.

--- a/CryptoExchanges.Net/CryptoExchanges.Net.Models/CryptoExchanges.Net.Models.csproj
+++ b/CryptoExchanges.Net/CryptoExchanges.Net.Models/CryptoExchanges.Net.Models.csproj
@@ -57,10 +57,9 @@
     <Compile Include="Market\TickerInfo.cs" />
     <Compile Include="Market\SymbolPrice.cs" />
     <Compile Include="Market\TickerPrice.cs" />
+    <Compile Include="Params\NewOrderParams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Params\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
