--- a/CryptoExchanges.Net/CryptoExchanges.Net.Utils/CryptoExchanges.Net.Utils.csproj
+++ b/CryptoExchanges.Net/CryptoExchanges.Net.Utils/CryptoExchanges.Net.Utils.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{73E75EFB-FC5D-46E8-B73F-30270A4C2760}</ProjectGuid>
+    <ProjectGuid>{B14CC3F8-8AFC-4C05-884C-F905D67C427B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CryptoExchanges.Net.Binance</RootNamespace>
-    <AssemblyName>CryptoExchanges.Net.Binance</AssemblyName>
+    <RootNamespace>CryptoExchanges.Net.Utils</RootNamespace>
+    <AssemblyName>CryptoExchanges.Net.Utils</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,20 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=6.2.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.6.2.2\lib\net45\AutoMapper.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,29 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiHelper\BinanceApiHelper.cs" />
-    <Compile Include="ApiHelper\IBinanceApiHelper.cs" />
-    <Compile Include="BinanceClient.cs" />
-    <Compile Include="BinanceNinjectModule.cs" />
-    <Compile Include="Configurations\MappingConfig.cs" />
-    <Compile Include="Constants\Endpoints.cs" />
+    <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\ExtensionMethods.cs" />
-    <Compile Include="Utils\Utilities.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CryptoExchanges.Net.Domain\CryptoExchanges.Net.Domain.csproj">
-      <Project>{4eadf056-78c8-45a6-87ce-8af994baea92}</Project>
-      <Name>CryptoExchanges.Net.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CryptoExchanges.Net.Models\CryptoExchanges.Net.Models.csproj">
-      <Project>{d27b812f-8baf-4718-a121-93bf4430bcc3}</Project>
-      <Name>CryptoExchanges.Net.Models</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
